--- a/views/ask.ejs
+++ b/views/ask.ejs
@@ -7,12 +7,12 @@
         <h3>Realizar pergunta</h3>
       </div>
       <div class="card-body">
-        <form>
+        <form method="POST" action="/save-ask">
           <label for="">Título</label>
-          <input type="text" placeholder="Título" class="form-control">
+          <input type="text" placeholder="Título" class="form-control" name="title">
           <br>
           <label for="">Descrição</label>
-          <textarea placeholder="Escreva sua pergunta aqui..." class="form-control"></textarea>
+          <textarea placeholder="Escreva sua pergunta aqui..." class="form-control" name="description"></textarea>
           <br>
           <button class="btn btn-primary">Perguntar</button>
         </form>
