--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,25 @@
 <%- include ('partials/header.ejs') %>
 <body>
   <%- include ('partials/navbar.ejs') %>
-  <h1>Home Page</h1>
+
+  <div class="container">
+    <br>
+    <h1>👇 Faça sua pergunta </h1>
+    <hr>
+    <a href="/ask" class="btn btn-primary">Perguntar</a>
+    <hr>
+    <% questions.forEach(question => { %>
+      <br>
+      <div class="card">
+        <div class="card-body">
+          <h3><%= question.title %></h3>
+        </div>
+        <div class="card-footer">
+          <button class="btn btn-primary">Responder</button>
+          <!-- <p><%= question.description %></p> -->
+        </div>
+      </div>
+    <% }) %>
+  </div>
 </body>
 <%- include ('partials/footer.ejs') %>
