--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,9 @@
           <h3><%= question.title %></h3>
         </div>
         <div class="card-footer">
-          <button class="btn btn-primary">Responder</button>
-          <!-- <p><%= question.description %></p> -->
+          <a href="/question/<%= question.id %>">
+            <button class="btn btn-primary">Responder</button>
+          </a>  
         </div>
       </div>
     <% }) %>
