--- a/views/question.ejs
+++ b/views/question.ejs
@@ -13,6 +13,17 @@
       <input type="hidden" name="question" value="<%= question.id %>">
       <button class="btn btn-primary">Responder</button>
     </form>
+    <hr>
+    <h3>Respostas</h3>
+    <hr>
+    <% replys.forEach(reply => {%>
+      <br>
+      <div class="card">
+        <div class="card-body">
+          <p><%= reply.body %></p>
+        </div>
+      </div>
+    <% }) %>
   </div>
 </body>
 <%- include ('partials/footer.ejs') %>
